# api/src/app.rs
@@ -73,6 +73,7 @@ impl App {
             &config.s3.bucket_name,
             ServiceConfig {
                 workday_garbage_retention_days: config.common.workday_garbage_retention_days,
+                account_deactivation_days: config.common.account_deactivation_days,
             },
         )
         .await
