# api/src/http/driver/routes.rs
@@ -3,9 +3,10 @@ use utoipa_axum::{router::OpenApiRouter, routes};
 use crate::{
     AppState,
     http::driver::handlers::{
-        __path_delete_rest_periods, __path_get_all_rest_periods, __path_set_rest_periods,
-        __path_update_driver_info, delete_rest_periods, get_all_rest_periods, set_rest_periods,
-        update_driver_info,
+        __path_deactivate_driver, __path_delete_rest_periods, __path_get_all_rest_periods,
+        __path_reactivate_driver, __path_set_rest_periods, __path_update_driver_info,
+        deactivate_driver, delete_rest_periods, get_all_rest_periods, reactivate_driver,
+        set_rest_periods, update_driver_info,
     },
 };
 
@@ -15,4 +16,6 @@ pub fn driver_routes() -> OpenApiRouter<AppState> {
         .routes(routes!(set_rest_periods))
         .routes(routes!(delete_rest_periods))
         .routes(routes!(update_driver_info))
+        .routes(routes!(deactivate_driver))
+        .routes(routes!(reactivate_driver))
 }
